--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "ress": "^4.0.0",
+    "styled-components": "^5.3.5",
     "web-vitals": "^2.1.2"
   },
   "scripts": {
