--- a/package.json
+++ b/package.json
@@ -49,6 +49,8 @@
     ]
   },
   "devDependencies": {
-    "babel-plugin-styled-components": "^2.0.7"
+    "babel-cli": "^6.26.0",
+    "babel-plugin-styled-components": "^2.0.7",
+    "babel-preset-env": "^1.7.0"
   }
 }
